--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "cctype": "cpp",
+        "ctime": "cpp",
+        "string": "cpp"
     }
 }
